Add grafana with pre-configured data source and dashboard

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,13 +14,21 @@ services:
     ports:
       - '9090:9090'
     volumes:
-      - '/vagrant/prometheus.yml:/etc/prometheus/prometheus.yml'
+      - '/vagrant/config/prometheus.yml:/etc/prometheus/prometheus.yml'
 
   prometheus_push_gateway:
     build: images/prometheus-push-gateway
     restart: always
     volumes:
       - '/var/lib/prometheus-push-gateway:/var/lib/prometheus-push-gateway'
+
+  grafana:
+    build: images/grafana
+    links:
+      - prometheus
+    ports:
+      - '3000:3000'
+    restart: always
 
   backup_job:
     build: images/backup-job
